--- a/Cookie.conf
+++ b/Cookie.conf
@@ -189,7 +189,7 @@ http:\/\/api\.gaoqingdianshi\.com\/api\/v\d\/sign\/signin url script-request-hea
 http:\/\/api\.gaoqingdianshi\.com\/api\/v2\/cash\/withdrawal\?code= url script-request-header https://raw.githubusercontent.com/Sunert/Scripts/master/Task/dianshijia.js
 
 # > 微博 (By @Macsuny)
-https:\/\/api\.weibo\.cn\/\d\/video\/machine\?gsid url script-request-header https://raw.githubusercontent.com/Sunert/Scripts/master/Task/weibo.js
+https:\/\/api\.weibo\.cn\/\d\/users\/show url script-request-header https://raw.githubusercontent.com/Sunert/Scripts/master/Task/weibo.js
 # 钱包
 https:\/\/pay\.sc\.weibo\.com\/aj\/mobile\/home\/welfare\/signin\/do\? url script-request-header https://raw.githubusercontent.com/Sunert/Scripts/master/Task/weibo.js
 
